Cau_hinh_lại_folder_pug

--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -1,6 +1,4 @@
-doctype html 
- head  
-  title Trang chủ
-
- body 
-  h1 Trang chủ
+//- từ file index.pug ở folder products, ta ../ để đi ra ngoài folder products, ../ thêm lần nữa để đi ra ngoài folder pages rồi bắt đầu vào folder layouts
+extends ../../layouts/default.pug
+block main 
+ h1 Trang danh sách sản phẩm
