--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,6 +1,4 @@
-doctype html 
- head  
-  title Trang chủ
-
- body 
-  h1 Trang chủ
+//- từ file index.pug ở folder home, ta ../ để đi ra ngoài folder home, ../ thêm lần nữa để đi ra ngoài folder pages
+extends ../../layouts/default.pug
+block main 
+ h1 Trang chủ
