--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -3,13 +3,13 @@ html
  head  
   //- gọi biến pageTitle từ trong home.controller và product.controller
   title #{pageTitle} 
-  link(rel = "stylesheet", src = "https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
+  link(rel = "stylesheet", href = "https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
   link(rel = "stylesheet", href = "/css/style.css")
 
  body 
 
- //-  file header ta sẽ viết ở thư mục khác(partials), ta sẽ nhúng file mà ta đã viết header vào trong đây
- include ../partials/header 
+  //-  file header ta sẽ viết ở thư mục khác(partials), ta sẽ nhúng file mà ta đã viết header vào trong đây
+  include ../partials/header 
 
   block main
 
