--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -8,12 +8,15 @@ block main
         +box-head("Danh sách sản phẩm")
 
     .row
+     each item in products
       .col-4.mb-3
         .product-item
           .inner-image
-            img(src="https://cdn.dummyjson.com/product-images/beauty/red-nail-polish/thumbnail.webp", alt="iPhone 9")
+            img(src=item.thumbnail, alt=item.title)
           .inner-content
-            h3.inner-title Red Nail Polish
-            .inner-price-new 7.96$
-            .inner-price-old 8.99$
-            .inner-discount -11.44%
+            h3.inner-title #{item.title}
+            .inner-price-new #{item.priceNew}$
+            .inner-price-old #{item.price}$
+            .inner-discount -#{item.discountPescentage}%
+
+    
