--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -5,13 +5,30 @@ block main
   .card.mb-3 
    .card-header Bộ lọc và tìm kiếm 
    .card-body 
-    each item in filterStatus
-      button( 
-        class = `btn bt-sm ml-1 btn-outline-success ${item.class}`
-        button-status=item.status
-        ) #{item.name}
-        //- cái button-status là mình tự định nghĩa
+    .row
+      .col-6
+        each item in filterStatus
+          button( 
+            class = `btn bt-sm ml-1 btn-outline-success ${item.class}`
+            button-status=item.status
+            ) #{item.name}
+            //- cái button-status là mình tự định nghĩa
+      .col-6
+        form(id="form-search")
+          .input-group
+            input(
+              type="text"
+              placeholder="Nhập từ khóa"
+              name="keyword"
+              class="form-control"
+            )
+            .input-group-append
+              button(
+                class="btn btn-success"
+                type="submit"
+              ) Tìm
 
+  
   .card.mb-3 
    .card-header Danh sách
     .card-body
