--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -21,7 +21,10 @@ block main
               placeholder="Nhập từ khóa"
               name="keyword"
               class="form-control"
+              value = keyword
             )
+            //- cái phần value = keyword đấy để khi người dung nhập từ ô tìm kiếm thì giá trị vừa nhập không bị mất đi 
+            
             .input-group-append
               button(
                 class="btn btn-success"
