--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -17,6 +17,6 @@ block main
             h3.inner-title #{item.title}
             .inner-price-new #{item.priceNew}$
             .inner-price-old #{item.price}$
-            .inner-discount -#{item.discountPescentage}%
+            .inner-discount -#{item.discountPercentage}%
 
     
