--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,4 +1,5 @@
 extends ../../layouts/default.pug
+include ../../mixins/filter-status.pug
 
 block main 
   h1 Danh sách sản phẩm
@@ -7,12 +8,7 @@ block main
    .card-body 
     .row
       .col-6
-        each item in filterStatus
-          button( 
-            class = `btn bt-sm ml-1 btn-outline-success ${item.class}`
-            button-status=item.status
-            ) #{item.name}
-            //- cái button-status là mình tự định nghĩa
+        +filter-status(filterStatus)
       .col-6
         form(id="form-search")
           .input-group
@@ -24,7 +20,7 @@ block main
               value = keyword
             )
             //- cái phần value = keyword đấy để khi người dung nhập từ ô tìm kiếm thì giá trị vừa nhập không bị mất đi 
-            
+
             .input-group-append
               button(
                 class="btn btn-success"
