--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/filter-status.pug
+include ../../mixins/search.pug
 
 block main 
   h1 Danh sách sản phẩm
@@ -10,22 +11,7 @@ block main
       .col-6
         +filter-status(filterStatus)
       .col-6
-        form(id="form-search")
-          .input-group
-            input(
-              type="text"
-              placeholder="Nhập từ khóa"
-              name="keyword"
-              class="form-control"
-              value = keyword
-            )
-            //- cái phần value = keyword đấy để khi người dung nhập từ ô tìm kiếm thì giá trị vừa nhập không bị mất đi 
-
-            .input-group-append
-              button(
-                class="btn btn-success"
-                type="submit"
-              ) Tìm
+        +search(keyword)
 
   
   .card.mb-3 
