--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -2,6 +2,7 @@ extends ../../layouts/default.pug
 block main 
   h1(class = "mb-4") Thêm mới sản phẩm 
   form(
+    enctype="multipart/form-data"
     action = `${prefixAdmin}/products/create`
     method ="POST"
     id = "form-create-product"
@@ -56,10 +57,11 @@ block main
     div(class = "form-group")
       label(for = "thumbnail") Ảnh
       input(
-        type = "text"
-        class = "form-control"
+        type="file"
+        class = "form-control-file"
         id = "thumbnail"
         name = "thumbnail"
+        accept = "image/*"
       )
     div(class = "form-group")
       label(for = "position") Vị trí
