--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -21,9 +21,17 @@ block main
     div(class = "form-group")
       label(for = "desc") Mô tả
       textarea(
-        class = "form-control"
+        class = "form-control textarea-mce"
         id = "desc"
         name = "description"
+        row = "5"
+      )
+    div(class = "form-group")
+      label(for = "desc") Nội dung
+      textarea(
+        class = "form-control textarea-mce"
+        id = "desc"
+        name = "content"
         row = "5"
       )
     div(class = "form-group")
