--- a/views/admin/pages/products-category/index.pug
+++ b/views/admin/pages/products-category/index.pug
@@ -1,4 +1,5 @@
 extends ../../layouts/default.pug
+include ../../mixins/table-tree.pug
 block main 
   h1 Danh sách sản phẩm
   .card.mb-3 
@@ -26,59 +27,4 @@ block main
               th Trạng thái
               th Hành động
           tbody
-            each item, index in records
-              tr
-                td
-                  input(
-                    type = "checkbox"
-                    name ="id"
-                    value =item.id
-                  ) 
-                td #{index +1}
-                td
-                  img(
-                    src= item.thumbnail 
-                    alt=item.title 
-                    width="100px" 
-                    height="auto"
-                  )
-                td #{item.title}
-                td 
-                  input(
-                    type = "number"
-                    value = item.position 
-                    style = "width : 60px"
-                    min = "1"
-                    name = "position"
-                  )
-                td
-                  if(item.status == "active")
-                    a(
-                      href="javascript: ;" 
-                      data-status = item.status
-                      data-id = item.id
-                      button-change-status 
-                      class="badge badge-success" ) Hoạt động
-                  else
-                    //- cái href="javascript: ;" để máy hiểu rằng ta đang bắt sự kiện bằng javascript 
-                    a(
-                      href="javascript: ;" 
-                      data-status = item.status
-                      data-id = item.id
-                      button-change-status 
-                      class="badge badge-danger") Dừng hoạt động
-                td
-                  //- dùng bootstrap để css cho các nút
-                  a(
-                    href = `${prefixAdmin}/products-category/detail/${item.id}`
-                    class="btn btn-secondary btn-sm"
-                    ) Chi tiết
-                  a(
-                    href = `${prefixAdmin}/products-category/edit/${item.id}`
-                    class="btn btn-warning btn-sm ml-1"
-                    ) Sửa
-                  button(
-                    class="btn btn-danger btn-sm ml-1"
-                    button-delete 
-                    data-id = item.id 
-                    ) Xóa       
+            +table-tree(records)
