--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -59,7 +59,8 @@ block main
                     name ="id"
                     value =item.id
                   ) 
-                td #{index +1}
+                td #{pagination.limitItems*(pagination.currentPage - 1)+(index+1)}  
+                  //- tạo stt chuẩn cho sản phẩm
                 td
                   img(
                     src= item.thumbnail 
