Upload ảnh trong tiny MCE

--- a/views/admin/pages/products-category/create.pug
+++ b/views/admin/pages/products-category/create.pug
@@ -46,7 +46,7 @@ block main
         class="form-control textarea-mce"
       )
 
-    div(class="form-group")
+    div(class="form-group" upload-image)
       //- nếu bạn dùng mixin gọi +upload-image() hoặc giữ custom tag nếu JS xử lý
       //- +upload-image()
 
