--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
 block main 
   +alert-success(5000)
   h1(class = "mb-4") Thêm mới sản phẩm 
@@ -18,6 +19,13 @@ block main
         name = "title"
         required
       )
+    div(class="form-group")
+      label(for="product_category_id") Danh mục
+      select(name = "product_category_id" id = "product_category_idd" class = "form-control")
+        option(value = "") -- Chọn danh mục cha --
+        if(category)
+          +select-tree(category)
+
     div(class = "form-group")
       label(for = "desc") Mô tả
       textarea(
