Tạo danh mục cha cho phần tính năng chỉnh sửa sản phẩm

--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -21,7 +21,7 @@ block main
       )
     div(class="form-group")
       label(for="product_category_id") Danh mục
-      select(name = "product_category_id" id = "product_category_idd" class = "form-control")
+      select(name = "product_category_id" id = "product_category_id" class = "form-control")
         option(value = "") -- Chọn danh mục cha --
         if(category)
           +select-tree(category)
