--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -9,17 +9,20 @@ html
 
   body 
     //- file header ta sẽ viết ở thư mục khác (partials)
-    include ../partials/header.pug
+    if(role.permissions.length > 0)
+      include ../partials/header.pug
 
-    .body
-      include ../partials/sider.pug
-      .main
-        block main
+      .body
+        include ../partials/sider.pug
+        .main
+          block main
 
-    script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
-    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
-    //- Tiny MCE
-    script(src = "/tinymce/tinymce.min.js")
-    script(src = "/admin/js/tinymce-config.js")
-    //- End Tiny MCE
-    script(src="/admin/js/script.js")
+      script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
+      script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
+      //- Tiny MCE
+      script(src = "/tinymce/tinymce.min.js")
+      script(src = "/admin/js/tinymce-config.js")
+      //- End Tiny MCE
+      script(src="/admin/js/script.js")
+    else 
+      h1 Bạn không có quyền truy cập
