--- a/views/admin/mixins/table-tree.pug
+++ b/views/admin/mixins/table-tree.pug
@@ -26,35 +26,45 @@ mixin table-tree(items, level = 1)
           name = "position"
         )
       td
-        if(item.status == "active")
-          a(
-            href="javascript: ;" 
-            data-status = item.status
-            data-id = item.id
-            button-change-status 
-            class="badge badge-success" ) Hoạt động
+        if(role.permissions.includes("products-category_edit"))
+          if(item.status == "active")
+            a(
+              href="javascript: ;" 
+              data-status = item.status
+              data-id = item.id
+              button-change-status 
+              class="badge badge-success" ) Hoạt động
+          else
+            //- cái href="javascript: ;" để máy hiểu rằng ta đang bắt sự kiện bằng javascript 
+            a(
+              href="javascript: ;" 
+              data-status = item.status
+              data-id = item.id
+              button-change-status 
+              class="badge badge-danger") Dừng hoạt động
         else
-          //- cái href="javascript: ;" để máy hiểu rằng ta đang bắt sự kiện bằng javascript 
-          a(
-            href="javascript: ;" 
-            data-status = item.status
-            data-id = item.id
-            button-change-status 
-            class="badge badge-danger") Dừng hoạt động
+          if(item.status == "active")
+            div(class="badge badge-success" ) Hoạt động
+          else
+            //- cái href="javascript: ;" để máy hiểu rằng ta đang bắt sự kiện bằng javascript 
+            div(class="badge badge-danger") Dừng hoạt động
+        
       td
         //- dùng bootstrap để css cho các nút
         a(
           href = `${prefixAdmin}/products-category/detail/${item.id}`
           class="btn btn-secondary btn-sm"
           ) Chi tiết
-        a(
-          href = `${prefixAdmin}/products-category/edit/${item.id}`
-          class="btn btn-warning btn-sm ml-1"
-          ) Sửa
-        button(
-          class="btn btn-danger btn-sm ml-1"
-          button-delete 
-          data-id = item.id 
-          ) Xóa     
+        if(role.permissions.includes("products-category_edit"))
+          a(
+            href = `${prefixAdmin}/products-category/edit/${item.id}`
+            class="btn btn-warning btn-sm ml-1"
+            ) Sửa
+        if(role.permissions.includes("products-category_delete"))
+          button(
+            class="btn btn-danger btn-sm ml-1"
+            button-delete 
+            data-id = item.id 
+            ) Xóa     
     if (item.children && item.children.length > 0)
       +table-tree(item.children, level + 1)  
