--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -53,6 +53,7 @@ block main
                 th Vị trí
                 th Trạng thái
                 th Người tạo
+                th Người cập nhật
                 th Hành động
             tbody
               each item, index in products
@@ -109,6 +110,12 @@ block main
                     p #{item.accountFullName}
                     p 
                       +formatDate(item.createdBy.createdAt)
+                  td 
+                    - const updatedBy = item.updatedBy[item.updatedBy.length-1]
+                    if(updatedBy)
+                      p #{updatedBy.accountFullName}
+                      p 
+                        +formatDate(updatedBy.updatedAt)
                   td
                     //- dùng bootstrap để css cho các nút
                     a(
