--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -3,10 +3,17 @@ extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
 include ../../mixins/product-layout.pug
 block main 
- .section-products-featured.my-5
-  .container
-    .row
-      .col-12
-        +box-head("Sản phẩm nổi bật")
+  .section-products-featured.my-5
+    .container
+      .row
+        .col-12
+          +box-head("Sản phẩm nổi bật")
 
-    +product-grid(productsFeatured)
+      +product-grid(productsFeatured)
+  .section-products-new.my-5
+    .container
+      .row
+        .col-12
+          +box-head("Sản phẩm mới")
+
+      +product-grid(productsNew)
