--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -1,6 +1,8 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
+include ../../mixins/alert.pug
 block main
+  +alert-success(2000)
   .product-detail
     .container.my-5
       .row
@@ -27,7 +29,7 @@ block main
           if (product.stock)
             div(class="inner-stock") Còn lại <span>#{product.stock}</span> sản phẩm
           
-          form(action = "/cart/add/${product.id}" method = "POST")
+          form(action = `/cart/add/${product.id}` method = "POST")
             input(
               class = "form-control mb-2"
               type = "number"
