--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -14,6 +14,7 @@ header.header
               placeholder = "Nhập từ khóa..."
               class = "form-control"
               name = "keyword"
+              style = "width: 700px"
               value = keyword 
             ) 
             //- làm be thì chỉ cần quan tâm đến mỗi cái name thôi
