--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -30,6 +30,9 @@ header.header
               +sub-menu(layoutProductsCategory, pathProduct)
             li 
               a(href = `/cart`) Giỏ hàng ({#{miniCart ? miniCart.totalQuantity: "0"}})
+            if(user)
+              li 
+                a(href ='/user/logout') Đăng xuất
             li 
               a(href ="/user/login") Đăng nhập
             li 
